fix: button color on safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -141,6 +141,7 @@ ul {
     background-color: rgba(180, 180, 180, 0.1);
     border: none;
     transition: background-color .2s;
+    color: rgba(0, 0, 0, 0.8);
 }
 
 #link>li>:is(a, button):hover {
@@ -316,6 +317,7 @@ button {
     justify-content: center;
     border: none;
     transition: background-color .2s;
+    color: rgba(0, 0, 0, 0.8);
 }
 
 #more ul>li>a:hover {
